--- a/cafe/index.html
+++ b/cafe/index.html
@@ -43,29 +43,31 @@
                 dependendo do método de preparação.
             </p>
         </section>
-        <section>
-            <div>
-                <div>
-                    <h2>Paulista</h2>
+        
+        <section class="produtos">
+            <div class="produtos-container">
+                <div class="produtos-item">
+                    <h2 class="produtos-paulista">Paulista</h2>
                     <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850
                         tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe muda do Pará
                     </p>
                 </div>
-                <div>
-                    <h2>Carioca</h2>
+                <div class="produtos-item">
+                    <h2 class="produtos-carioca">Carioca</h2>
                     <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850
                         tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe muda do Pará
                     </p>
                 </div>
-                <div>
-                    <h2>Mineira</h2>
+                <div class="produtos-item">
+                    <h2 class="produtos-mineira">Mineira</h2>
                     <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850
                         tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe muda do Pará
                     </p>
                 </div>
             </div>
-            <a href="#">Saiba mais</a>
+            <a class="produtos-btn" href="#">Saiba mais</a>
         </section>
+
         <section>
             <div>
                 <img src="img/botafogo.jpg" alt="Brafé unidade Botafogo" >
