--- a/cafe/index.html
+++ b/cafe/index.html
@@ -68,8 +68,8 @@
             <a class="produtos-btn" href="#">Saiba mais</a>
         </section>
 
-        <section>
-            <div>
+        <section class="locais">
+            <div class="locais-item">
                 <img src="img/botafogo.jpg" alt="Brafé unidade Botafogo" >
                 <div>
                     <h2>Botafogo</h2>
@@ -78,7 +78,7 @@
                     <a href="#">Ver mapa</a>
                 </div>
             </div>
-            <div>
+            <div class="locais-item">
                 <img src="img/iguatemi.jpg" alt="Brafé unidade Botafogo" >
                 <div>
                     <h2>Iguatemi</h2>
@@ -87,7 +87,7 @@
                     <a href="#">Ver mapa</a>
                 </div>
             </div>
-            <div>
+            <div class="locais-item">
                 <img src="img/botafogo.jpg" alt="Brafé unidade Botafogo" >
                 <div>
                     <h2>Minerão</h2>
