--- a/cafe/index.html
+++ b/cafe/index.html
@@ -97,9 +97,9 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div>
-                <div>
+        <section class="assine">
+            <div class="assine-container">
+                <div class="assine-info">
                     <h2>Assine nos Newsletter</h2>
                     <p>promoções e eventos mensais</p>
                 </div>
@@ -110,8 +110,8 @@
                 </form>
             </div>
         </section>
-        <footer>
-            <div>
+        <footer class="footer">
+            <div class="footer-container">
                 <p>Este é um projeto de Origmid. Mais em origamid.com<br>
                    Praia de Botafogo, 300, 5° andar - Botafogo - Rio de Janeiro
                 </p>
